--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    max-width: 1170px;
+    width: 100%;
     height: 70px;
     background-color: #f2eaea;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
